extract backup host to global config

--- a/templates/etc/cron.daily/daily_backup.j2
+++ b/templates/etc/cron.daily/daily_backup.j2
@@ -1,9 +1,14 @@
 #!/bin/sh
+
+. /usr/local/etc/dubzland/backups.conf
+
+echo "DUBZLAND_BACKUP_HOST: ${DUBZLAND_BACKUP_HOST}"
+
 {% for cmd in dubzland_backup_client_pre_backup_commands %}
 {{ cmd }}
 {% endfor %}
 {% for dir in dubzland_backup_client_dirs %}
-/usr/local/bin/daily_backup -H {{ dubzland_backup_client_host }} -s {{ dir }}
+/usr/local/bin/daily_backup -H "${DUBZLAND_BACKUP_HOST}" -s {{ dir }}
 {% endfor %}
 {% for cmd in dubzland_backup_client_post_backup_commands %}
 {{ cmd }}
